# rbx-dom

./: .gitmodules  aftman.toml  rokit.toml
.github/workflows/: ci.yml  luau-lint.yml
.lune/: validate-crate-versions.luau
rbx-dom/rbx_binary/src/tests/snapshots/: rbx_binary__tests__serializer__default_shared_string.snap  rbx_binary__tests__serializer__does_not_serialize.snap  rbx_binary__tests__serializer__just_folder.snap  rbx_binary__tests__serializer__logical_properties_basepart_size.snap  rbx_binary__tests__serializer__migrated_properties.snap  rbx_binary__tests__serializer__part_color.snap  rbx_binary__tests__serializer__partially_present.snap  rbx_binary__tests__serializer__unknown_property.snap  rbx_binary__tests__util__attributes__decoded.snap  rbx_binary__tests__util__attributes__encoded.snap  rbx_binary__tests__util__attributes__input.snap  rbx_binary__tests__util__axes__decoded.snap  rbx_binary__tests__util__axes__encoded.snap  rbx_binary__tests__util__axes__input.snap  rbx_binary__tests__util__baseplate-566__decoded.snap  (+134 more)
rbx-dom/rbx_dom_weak/src/snapshots/: rbx_dom_weak__dom__test__clone_into_external-2.snap  rbx_dom_weak__dom__test__clone_into_external.snap  rbx_dom_weak__dom__test__clone_multiple_into_external.snap  rbx_dom_weak__dom__test__clone_within.snap  rbx_dom_weak__dom__test__transfer-2.snap  rbx_dom_weak__dom__test__transfer-3.snap  rbx_dom_weak__dom__test__transfer.snap  rbx_dom_weak__dom__test__transfer_within-2.snap  rbx_dom_weak__dom__test__transfer_within.snap  rbx_dom_weak__viewer__test__abbreviate_shared_string.snap  rbx_dom_weak__viewer__test__redact_multi.snap  rbx_dom_weak__viewer__test__redact_single.snap  rbx_dom_weak__viewer__test__redact_values.snap
rbx_binary/: Cargo.toml
rbx_binary/src/: chunk.rs  core.rs  text_deserializer.rs
rbx_binary/src/deserializer/: error.rs  header.rs  state.rs
rbx_binary/src/serializer/: state.rs
rbx_dom_weak/: Cargo.toml
rbx_dom_weak/src/: dom.rs  viewer.rs
rbx_reflection/: Cargo.toml
rbx_reflection/src/: database.rs
rbx_reflection_database/: Cargo.toml
rbx_reflection_database/src/: lib.rs
rbx_reflector/: Cargo.toml
rbx_reflector/src/cli/: values.rs
rbx_types/: Cargo.toml
rbx_types/src/: axes.rs  binary_string.rs  brick_color.rs  faces.rs  material_colors.rs  physical_properties.rs  referent.rs  shared_string.rs  unique_id.rs  variant.rs
rbx_types/src/attributes/: mod.rs
rbx_util/: Cargo.toml
rbx_xml/: Cargo.toml
rbx_xml/src/: conversion.rs  deserializer.rs  deserializer_core.rs  serializer.rs
rbx_xml/src/types/: attributes.rs  binary_string.rs  material_colors.rs  net_asset_ref.rs  shared_string.rs  tags.rs
(+102 files in other folders)
