[package]
name = "rbx_types"
description = "Types used to represent Roblox values"
version = "3.1.0"
authors = [
    "Lucien Greathouse <me@lpghatguy.com>",
    "Micah Reid <git@dekkonot.com>",
    "Ken Loeffler <kenloef@gmail.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rojo-rbx/rbx-dom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
blake3 = "1.8.3"
bitflags = "1.3.2"
lazy_static = "1.5.0"
rand = "0.8.5"
thiserror = "1.0.69"
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
insta = { version = "1.46.1", features = ["yaml"] }
bincode = "1.3.3"
serde_json = "1.0.149"
