[package]
name = "rbx_types"
description = "Types used to represent Roblox values"
version = "3.1.0"
authors = [
    "Lucien Greathouse <me@lpghatguy.com>",
    "Micah Reid <git@dekkonot.com>",
    "Ken Loeffler <kenloef@gmail.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UserGeneratedLLC/rbx-dom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
blake3 = "1.8.3"
bitflags = "2"
lazy_static = "1.5.0"
rand = "0.9"
thiserror = "2"
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
bincode = { version = "2", features = ["serde"] }
serde_json = "1.0.149"
